--- a/config/css/estilo.css
+++ b/config/css/estilo.css
@@ -28,4 +28,142 @@ body {
     justify-content: center;
     align-items: center;
     background-color: #4F758C;
+    padding: 1rem;
+}
+
+.quadrado_imagem img {
+    width: 31rem;
+
+}
+
+.form {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: #fff;
+    padding: 3rem;
+}
+
+.form_header {
+    margin-bottom: 3rem;
+    display: flex;
+    justify-content: space-between;
+}
+
+.botao_login {
+    display: flex;
+    align-items: center;
+}
+
+.botao_login button {
+    border: none;
+    background-color: #2A4759;
+    padding: 0.4rem 1rem;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.botao_login button:hover{
+    background-color: #2c5066;
+}
+
+.botao_login button a {
+    text-decoration: none;
+    font-weight: 500;
+    color: #fff;
+}
+
+.form_header h1::after {
+    content: '';
+    display: block;
+    width: 5rem;
+    height: 0.3rem;
+    background-color: #2A4759;
+    margin: 0 auto;
+    border-radius: 10px;
+}
+
+.dados {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 1rem 0;
+}
+
+.input_dados {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 1.1rem;
+}
+
+.input_dados input {
+    margin: 0.6rem 0;
+    padding: 0.8rem 1.2rem;
+    border: none;
+    border-radius: 10px;
+    box-shadow: 1px 1px 6px #0000001c;
+}
+
+.input_dados input:hover {
+    background-color: #C3D0D2;
+}
+
+.input_dados input:focus-visible {
+    outline: 1px solid #2A4759;
+}
+
+.input_dados label,
+.genero_titulo h6 {
+    font-size: 0.75rem;
+    font-weight: 600;
+    color: #000000c0;
+}
+
+.input_dados input::placeholder {
+    color: #000000be
+}
+
+.genero_inputs {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 0.62rem;
+    padding: 0 0.5rem;
+}
+
+.genero {
+    display: flex;
+    align-items: center;
+}
+
+.genero input {
+    margin-right: 0.35rem;
+}
+
+.genero label {
+    font-size: 0.81rem;
+    font-weight: 600;
+    color: #000000c0;
+}
+
+.botao_continue button {
+    width: 100%;
+    margin-top: 2.5rem;
+    border: none;
+    padding: 0.62rem;
+    background-color: #2A4759;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.botao_continue button:hover {
+    background-color: #2c5066;
+}
+
+.botao_continue button a {
+    text-decoration: none;
+    font-size: 0.93rem;
+    font-weight: 500;
+    color: #fff;
 }
